Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7094

Text rendering corruption in designer's about dialog with GL

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.6.2
    • 4.6.0
    • GUI: OpenGL
    • None
    • 1e7922262c29ba29a70226cf8894645f46df3ca2

    Description

      When you run designer with "-graphicssystem opengl", the about dialog has slightly corrupted text. Resizing the window to an even height makes the text rendered correctly, but resizing it again to an odd size demonstrates the problem. When using the GL1 engine (-graphicssystem opengl1), there is still corruption but the text instead appears blury.

      This feels very much like there's a slight offset being applied to the texture coords in both the GL1 and GL2 engines and the GL2 engine is using GL_NERAREST and the GL1 engine is using GL_LINEAR, however this is just a guess.

      Attachments

        1. GL_text_bug1.png
          GL_text_bug1.png
          22 kB
        2. GL_text_bug2.png
          GL_text_bug2.png
          8 kB
        3. QTBUG-7094.tar.gz
          1.0 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              tcooksey Tom Cooksey
              tcooksey Tom Cooksey
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes